@@ -15,10 +15,13 @@ EVENT_KB id=1  type=NoteOn chn=1 key=any use_key_number=1 range=0:127  lcd_pos=1
 # (we enable all 64 inputs)
 AINSER n=1   enabled=1  cs=0  num_pins=64  resolution=7bit
 
-# optional: calibrate the wheels between a "physically limited" min/max value
+# optional: calibrate the wheels between a "physically limited" min/max value.
+# Set also "spread_center" for the PitchBend wheel to ensure that the middle value
+# will be sent when the wheel is around the center.
+#
 # In order to determine these values, enter "set debug on" in MIOS Terminal,
 # and move the wheels to the min and max position. Enter the min/max values here:
-AINSER pinrange=1:18:4065
+AINSER pinrange=1:18:4065:spread_center
 AINSER pinrange=2:18:4065
 
 EVENT_AINSER id=1  type=PitchBend  chn= 1        range=0:16383 lcd_pos=1:1:2  label="PitchBender: %5d%B"
